# AndroidPlayer

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/androidplayer/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: Audio.cpp  Audio.h  CallJava.cpp  CallJava.h  FFmpegHandle.cpp  FFmpegHandle.h  Log.h  PacketQueue.cpp  PacketQueue.h  PlayStatus.cpp  PlayStatus.h  Video.cpp  Video.h  native-lib.cpp
ffmpeg/src/main/java/com/example/ffmpeg/: FFmpeg.java
ffmpeg/src/main/java/com/example/ffmpeg/bean/: TimeInfoBean.java
ffmpeg/src/main/java/com/example/ffmpeg/listener/: MyOnCompleteListener.java  MyOnParparedListener.java  MyOnTimeInfoListener.java
ffmpeg/src/main/java/com/example/ffmpeg/opengl/: MyGLSurfaceView.java  MyRender.java  MyShaderUtil.java
ffmpeg/src/main/java/com/example/ffmpeg/util/: MyVideoSupportUitl.java  TimeUtil.java
gradle/wrapper/: gradle-wrapper.properties
